--- a/cn.zh-cn/API参考/批量查询监控数据.md
+++ b/cn.zh-cn/API参考/批量查询监控数据.md
@@ -6,29 +6,29 @@
 
 ## URI<a name="section26247582191739"></a>
 
--   URI格式
-
-    POST /V1.0/\{project\_id\}/batch-query-metric-data
+POST /V1.0/\{project\_id\}/batch-query-metric-data
 
 -   参数说明
 
+    **表 1**  参数说明
+
     <a name="table61299064191739"></a>
-    <table><thead align="left"><tr id="row46292936191739"><th class="cellrowborder" valign="top" width="24.36235708003518%" id="mcps1.1.3.1.1"><p id="p58740307191739"><a name="p58740307191739"></a><a name="p58740307191739"></a>名称</p>
+    <table><thead align="left"><tr id="row46292936191739"><th class="cellrowborder" valign="top" width="24.36235708003518%" id="mcps1.2.3.1.1"><p id="p58740307191739"><a name="p58740307191739"></a><a name="p58740307191739"></a>名称</p>
     </th>
-    <th class="cellrowborder" valign="top" width="75.63764291996482%" id="mcps1.1.3.1.2"><p id="p56060739191739"><a name="p56060739191739"></a><a name="p56060739191739"></a>说明</p>
+    <th class="cellrowborder" valign="top" width="75.63764291996482%" id="mcps1.2.3.1.2"><p id="p56060739191739"><a name="p56060739191739"></a><a name="p56060739191739"></a>说明</p>
     </th>
     </tr>
     </thead>
-    <tbody><tr id="row44626040191739"><td class="cellrowborder" valign="top" width="24.36235708003518%" headers="mcps1.1.3.1.1 "><p id="p57939510191739"><a name="p57939510191739"></a><a name="p57939510191739"></a>project_id</p>
+    <tbody><tr id="row44626040191739"><td class="cellrowborder" valign="top" width="24.36235708003518%" headers="mcps1.2.3.1.1 "><p id="p57939510191739"><a name="p57939510191739"></a><a name="p57939510191739"></a>project_id</p>
     </td>
-    <td class="cellrowborder" valign="top" width="75.63764291996482%" headers="mcps1.1.3.1.2 "><p id="p36520554191739"><a name="p36520554191739"></a><a name="p36520554191739"></a>项目编号。</p>
+    <td class="cellrowborder" valign="top" width="75.63764291996482%" headers="mcps1.2.3.1.2 "><p id="p36520554191739"><a name="p36520554191739"></a><a name="p36520554191739"></a>项目编号。</p>
     </td>
     </tr>
     </tbody>
     </table>
 
 
-## 请求<a name="section60249534191739"></a>
+## 请求消息<a name="section60249534191739"></a>
 
 >![](public_sys-resources/icon-notice.gif) **注意：**   
 >1.  单次POST请求消息体大小不能超过512KB，否则请求会被服务端拒绝。  
@@ -40,96 +40,98 @@
 >    当period为"14400" 时，from与to的间隔最大为30天；若from与to间隔大于30天，则调整from值为to- 30\*24\*3600\*1000。  
 >    当period为"86400" 时，from与to的间隔最大为180天；若from与to间隔大于180天，则调整from值为to- 180\*24\*3600\*1000。  
 
--   参数说明
+-   请求参数
+
+    **表 2**  请求参数
 
     <a name="table53651023191739"></a>
-    <table><thead align="left"><tr id="row41871473191739"><th class="cellrowborder" valign="top" width="19.84%" id="mcps1.1.5.1.1"><p id="p36146190191739"><a name="p36146190191739"></a><a name="p36146190191739"></a>名称</p>
+    <table><thead align="left"><tr id="row41871473191739"><th class="cellrowborder" valign="top" width="19.84%" id="mcps1.2.5.1.1"><p id="p36146190191739"><a name="p36146190191739"></a><a name="p36146190191739"></a>名称</p>
     </th>
-    <th class="cellrowborder" valign="top" width="15.840000000000002%" id="mcps1.1.5.1.2"><p id="p42160267191739"><a name="p42160267191739"></a><a name="p42160267191739"></a>是否必选</p>
+    <th class="cellrowborder" valign="top" width="15.840000000000002%" id="mcps1.2.5.1.2"><p id="p42160267191739"><a name="p42160267191739"></a><a name="p42160267191739"></a>是否必选</p>
     </th>
-    <th class="cellrowborder" valign="top" width="18.94%" id="mcps1.1.5.1.3"><p id="p59538448191739"><a name="p59538448191739"></a><a name="p59538448191739"></a>参数类型</p>
+    <th class="cellrowborder" valign="top" width="18.94%" id="mcps1.2.5.1.3"><p id="p59538448191739"><a name="p59538448191739"></a><a name="p59538448191739"></a>参数类型</p>
     </th>
-    <th class="cellrowborder" valign="top" width="45.379999999999995%" id="mcps1.1.5.1.4"><p id="p57884998191739"><a name="p57884998191739"></a><a name="p57884998191739"></a>说明</p>
+    <th class="cellrowborder" valign="top" width="45.379999999999995%" id="mcps1.2.5.1.4"><p id="p57884998191739"><a name="p57884998191739"></a><a name="p57884998191739"></a>说明</p>
     </th>
     </tr>
     </thead>
-    <tbody><tr id="row58173268191739"><td class="cellrowborder" valign="top" width="19.84%" headers="mcps1.1.5.1.1 "><p id="p14414307191739"><a name="p14414307191739"></a><a name="p14414307191739"></a>metrics</p>
+    <tbody><tr id="row58173268191739"><td class="cellrowborder" valign="top" width="19.84%" headers="mcps1.2.5.1.1 "><p id="p14414307191739"><a name="p14414307191739"></a><a name="p14414307191739"></a>metrics</p>
     </td>
-    <td class="cellrowborder" valign="top" width="15.840000000000002%" headers="mcps1.1.5.1.2 "><p id="p26708251191739"><a name="p26708251191739"></a><a name="p26708251191739"></a>是</p>
+    <td class="cellrowborder" valign="top" width="15.840000000000002%" headers="mcps1.2.5.1.2 "><p id="p26708251191739"><a name="p26708251191739"></a><a name="p26708251191739"></a>是</p>
     </td>
-    <td class="cellrowborder" valign="top" width="18.94%" headers="mcps1.1.5.1.3 "><p id="p15884707191739"><a name="p15884707191739"></a><a name="p15884707191739"></a>JSON数组</p>
+    <td class="cellrowborder" valign="top" width="18.94%" headers="mcps1.2.5.1.3 "><p id="p15884707191739"><a name="p15884707191739"></a><a name="p15884707191739"></a>JSON数组</p>
     </td>
-    <td class="cellrowborder" valign="top" width="45.379999999999995%" headers="mcps1.1.5.1.4 "><p id="p11592867191739"><a name="p11592867191739"></a><a name="p11592867191739"></a>指标数据。数组长度最大10</p>
-    </td>
-    </tr>
-    <tr id="row37226944191739"><td class="cellrowborder" valign="top" width="19.84%" headers="mcps1.1.5.1.1 "><p id="p62592488191739"><a name="p62592488191739"></a><a name="p62592488191739"></a>namespace</p>
-    </td>
-    <td class="cellrowborder" valign="top" width="15.840000000000002%" headers="mcps1.1.5.1.2 "><p id="p36826781191739"><a name="p36826781191739"></a><a name="p36826781191739"></a>是</p>
-    </td>
-    <td class="cellrowborder" valign="top" width="18.94%" headers="mcps1.1.5.1.3 "><p id="p30179270191739"><a name="p30179270191739"></a><a name="p30179270191739"></a>字符串</p>
-    </td>
-    <td class="cellrowborder" valign="top" width="45.379999999999995%" headers="mcps1.1.5.1.4 "><p id="p28601804191739"><a name="p28601804191739"></a><a name="p28601804191739"></a>指标命名空间，格式为service.item；service和item必须是字符串，必须以字母开头，只能包含0-9/a-z/A-Z/_，总长度最短为3，最大为32。</p>
+    <td class="cellrowborder" valign="top" width="45.379999999999995%" headers="mcps1.2.5.1.4 "><p id="p11592867191739"><a name="p11592867191739"></a><a name="p11592867191739"></a>指标数据。数组长度最大10</p>
     </td>
     </tr>
-    <tr id="row56089645191739"><td class="cellrowborder" valign="top" width="19.84%" headers="mcps1.1.5.1.1 "><p id="p46967368191739"><a name="p46967368191739"></a><a name="p46967368191739"></a>metric_name</p>
+    <tr id="row37226944191739"><td class="cellrowborder" valign="top" width="19.84%" headers="mcps1.2.5.1.1 "><p id="p62592488191739"><a name="p62592488191739"></a><a name="p62592488191739"></a>namespace</p>
     </td>
-    <td class="cellrowborder" valign="top" width="15.840000000000002%" headers="mcps1.1.5.1.2 "><p id="p46260468191739"><a name="p46260468191739"></a><a name="p46260468191739"></a>是</p>
+    <td class="cellrowborder" valign="top" width="15.840000000000002%" headers="mcps1.2.5.1.2 "><p id="p36826781191739"><a name="p36826781191739"></a><a name="p36826781191739"></a>是</p>
     </td>
-    <td class="cellrowborder" valign="top" width="18.94%" headers="mcps1.1.5.1.3 "><p id="p56110424191739"><a name="p56110424191739"></a><a name="p56110424191739"></a>字符串</p>
+    <td class="cellrowborder" valign="top" width="18.94%" headers="mcps1.2.5.1.3 "><p id="p30179270191739"><a name="p30179270191739"></a><a name="p30179270191739"></a>字符串</p>
     </td>
-    <td class="cellrowborder" valign="top" width="45.379999999999995%" headers="mcps1.1.5.1.4 "><p id="p48650525191739"><a name="p48650525191739"></a><a name="p48650525191739"></a>指标名称，必须以字母开头，只能包含0-9/a-z/A-Z/_，长度最短为1，最大为64。</p>
+    <td class="cellrowborder" valign="top" width="45.379999999999995%" headers="mcps1.2.5.1.4 "><p id="p28601804191739"><a name="p28601804191739"></a><a name="p28601804191739"></a>指标命名空间，格式为service.item；service和item必须是字符串，必须以字母开头，只能包含0-9/a-z/A-Z/_，总长度最短为3，最大为32。</p>
     </td>
     </tr>
-    <tr id="row35201547191739"><td class="cellrowborder" valign="top" width="19.84%" headers="mcps1.1.5.1.1 "><p id="p32753092191739"><a name="p32753092191739"></a><a name="p32753092191739"></a>dimensions</p>
+    <tr id="row56089645191739"><td class="cellrowborder" valign="top" width="19.84%" headers="mcps1.2.5.1.1 "><p id="p46967368191739"><a name="p46967368191739"></a><a name="p46967368191739"></a>metric_name</p>
     </td>
-    <td class="cellrowborder" valign="top" width="15.840000000000002%" headers="mcps1.1.5.1.2 "><p id="p35754801191739"><a name="p35754801191739"></a><a name="p35754801191739"></a>是</p>
+    <td class="cellrowborder" valign="top" width="15.840000000000002%" headers="mcps1.2.5.1.2 "><p id="p46260468191739"><a name="p46260468191739"></a><a name="p46260468191739"></a>是</p>
     </td>
-    <td class="cellrowborder" valign="top" width="18.94%" headers="mcps1.1.5.1.3 "><p id="p10457787191739"><a name="p10457787191739"></a><a name="p10457787191739"></a>JSON数组</p>
+    <td class="cellrowborder" valign="top" width="18.94%" headers="mcps1.2.5.1.3 "><p id="p56110424191739"><a name="p56110424191739"></a><a name="p56110424191739"></a>字符串</p>
     </td>
-    <td class="cellrowborder" valign="top" width="45.379999999999995%" headers="mcps1.1.5.1.4 "><p id="p41774409191739"><a name="p41774409191739"></a><a name="p41774409191739"></a>指标维度列表。</p>
+    <td class="cellrowborder" valign="top" width="45.379999999999995%" headers="mcps1.2.5.1.4 "><p id="p48650525191739"><a name="p48650525191739"></a><a name="p48650525191739"></a>指标名称，必须以字母开头，只能包含0-9/a-z/A-Z/_，长度最短为1，最大为64。</p>
+    </td>
+    </tr>
+    <tr id="row35201547191739"><td class="cellrowborder" valign="top" width="19.84%" headers="mcps1.2.5.1.1 "><p id="p32753092191739"><a name="p32753092191739"></a><a name="p32753092191739"></a>dimensions</p>
+    </td>
+    <td class="cellrowborder" valign="top" width="15.840000000000002%" headers="mcps1.2.5.1.2 "><p id="p35754801191739"><a name="p35754801191739"></a><a name="p35754801191739"></a>是</p>
+    </td>
+    <td class="cellrowborder" valign="top" width="18.94%" headers="mcps1.2.5.1.3 "><p id="p10457787191739"><a name="p10457787191739"></a><a name="p10457787191739"></a>JSON数组</p>
+    </td>
+    <td class="cellrowborder" valign="top" width="45.379999999999995%" headers="mcps1.2.5.1.4 "><p id="p41774409191739"><a name="p41774409191739"></a><a name="p41774409191739"></a>指标维度列表。</p>
     <p id="p40425365191739"><a name="p40425365191739"></a><a name="p40425365191739"></a>单个维度为json对象，结构说明如下</p>
     <p id="p28283972191739"><a name="p28283972191739"></a><a name="p28283972191739"></a>dimension.name：必须以字母开头，只能包含0-9/a-z/A-Z/_/-，长度最短为1，最大为32。</p>
     <p id="p53229157191739"><a name="p53229157191739"></a><a name="p53229157191739"></a>dimension.value：必须以字母或数字开头，只能包含0-9/a-z/A-Z/_/-，长度最短为1，最大为256。</p>
     </td>
     </tr>
-    <tr id="row9300371191739"><td class="cellrowborder" valign="top" width="19.84%" headers="mcps1.1.5.1.1 "><p id="p15132575191739"><a name="p15132575191739"></a><a name="p15132575191739"></a>from</p>
+    <tr id="row9300371191739"><td class="cellrowborder" valign="top" width="19.84%" headers="mcps1.2.5.1.1 "><p id="p15132575191739"><a name="p15132575191739"></a><a name="p15132575191739"></a>from</p>
     </td>
-    <td class="cellrowborder" valign="top" width="15.840000000000002%" headers="mcps1.1.5.1.2 "><p id="p17779023191739"><a name="p17779023191739"></a><a name="p17779023191739"></a>是</p>
+    <td class="cellrowborder" valign="top" width="15.840000000000002%" headers="mcps1.2.5.1.2 "><p id="p17779023191739"><a name="p17779023191739"></a><a name="p17779023191739"></a>是</p>
     </td>
-    <td class="cellrowborder" valign="top" width="18.94%" headers="mcps1.1.5.1.3 "><p id="p30814731191739"><a name="p30814731191739"></a><a name="p30814731191739"></a>时间戳</p>
+    <td class="cellrowborder" valign="top" width="18.94%" headers="mcps1.2.5.1.3 "><p id="p30814731191739"><a name="p30814731191739"></a><a name="p30814731191739"></a>时间戳</p>
     </td>
-    <td class="cellrowborder" valign="top" width="45.379999999999995%" headers="mcps1.1.5.1.4 "><p id="p12965308191739"><a name="p12965308191739"></a><a name="p12965308191739"></a>查询数据起始时间，UNIX时间戳，单位毫秒。建议from的值相对于当前时间向前偏移至少1个周期。由于聚合运算的过程是将一个聚合周期范围内的数据点聚合到周期起始边界上，如果将from和to的范围设置在聚合周期内，会因为聚合未完成而造成查询数据为空，所以建议from参数相对于当前时间向前偏移至少1个周期。以5分钟聚合周期为例：假设当前时间点为10:35，10:30~10:35之间的原始数据会被聚合到10:30这个点上，所以查询5分钟数据点时from参数应为10:30或之前。</p>
+    <td class="cellrowborder" valign="top" width="45.379999999999995%" headers="mcps1.2.5.1.4 "><p id="p12965308191739"><a name="p12965308191739"></a><a name="p12965308191739"></a>查询数据起始时间，UNIX时间戳，单位毫秒。建议from的值相对于当前时间向前偏移至少1个周期。由于聚合运算的过程是将一个聚合周期范围内的数据点聚合到周期起始边界上，如果将from和to的范围设置在聚合周期内，会因为聚合未完成而造成查询数据为空，所以建议from参数相对于当前时间向前偏移至少1个周期。以5分钟聚合周期为例：假设当前时间点为10:35，10:30~10:35之间的原始数据会被聚合到10:30这个点上，所以查询5分钟数据点时from参数应为10:30或之前。</p>
     <div class="note" id="note49578916191739"><a name="note49578916191739"></a><a name="note49578916191739"></a><span class="notetitle"> 说明： </span><div class="notebody"><p id="p43557066191739"><a name="p43557066191739"></a><a name="p43557066191739"></a>云监控会根据所选择的聚合粒度向前取整from参数。</p>
     </div></div>
     </td>
     </tr>
-    <tr id="row38461468191739"><td class="cellrowborder" valign="top" width="19.84%" headers="mcps1.1.5.1.1 "><p id="p28371227191739"><a name="p28371227191739"></a><a name="p28371227191739"></a>to</p>
+    <tr id="row38461468191739"><td class="cellrowborder" valign="top" width="19.84%" headers="mcps1.2.5.1.1 "><p id="p28371227191739"><a name="p28371227191739"></a><a name="p28371227191739"></a>to</p>
     </td>
-    <td class="cellrowborder" valign="top" width="15.840000000000002%" headers="mcps1.1.5.1.2 "><p id="p16368046191739"><a name="p16368046191739"></a><a name="p16368046191739"></a>是</p>
+    <td class="cellrowborder" valign="top" width="15.840000000000002%" headers="mcps1.2.5.1.2 "><p id="p16368046191739"><a name="p16368046191739"></a><a name="p16368046191739"></a>是</p>
     </td>
-    <td class="cellrowborder" valign="top" width="18.94%" headers="mcps1.1.5.1.3 "><p id="p50743358191739"><a name="p50743358191739"></a><a name="p50743358191739"></a>时间戳</p>
+    <td class="cellrowborder" valign="top" width="18.94%" headers="mcps1.2.5.1.3 "><p id="p50743358191739"><a name="p50743358191739"></a><a name="p50743358191739"></a>时间戳</p>
     </td>
-    <td class="cellrowborder" valign="top" width="45.379999999999995%" headers="mcps1.1.5.1.4 "><p id="p16571314191739"><a name="p16571314191739"></a><a name="p16571314191739"></a>查询数据截止时间UNIX时间戳，单位毫秒。from必须小于to。</p>
+    <td class="cellrowborder" valign="top" width="45.379999999999995%" headers="mcps1.2.5.1.4 "><p id="p16571314191739"><a name="p16571314191739"></a><a name="p16571314191739"></a>查询数据截止时间UNIX时间戳，单位毫秒。from必须小于to。</p>
     </td>
     </tr>
-    <tr id="row14924101191739"><td class="cellrowborder" valign="top" width="19.84%" headers="mcps1.1.5.1.1 "><p id="p892683191739"><a name="p892683191739"></a><a name="p892683191739"></a>period</p>
+    <tr id="row14924101191739"><td class="cellrowborder" valign="top" width="19.84%" headers="mcps1.2.5.1.1 "><p id="p892683191739"><a name="p892683191739"></a><a name="p892683191739"></a>period</p>
     </td>
-    <td class="cellrowborder" valign="top" width="15.840000000000002%" headers="mcps1.1.5.1.2 "><p id="p5198505191739"><a name="p5198505191739"></a><a name="p5198505191739"></a>是</p>
+    <td class="cellrowborder" valign="top" width="15.840000000000002%" headers="mcps1.2.5.1.2 "><p id="p5198505191739"><a name="p5198505191739"></a><a name="p5198505191739"></a>是</p>
     </td>
-    <td class="cellrowborder" valign="top" width="18.94%" headers="mcps1.1.5.1.3 "><p id="p18425800191739"><a name="p18425800191739"></a><a name="p18425800191739"></a>枚举，字符串</p>
+    <td class="cellrowborder" valign="top" width="18.94%" headers="mcps1.2.5.1.3 "><p id="p18425800191739"><a name="p18425800191739"></a><a name="p18425800191739"></a>枚举，字符串</p>
     </td>
-    <td class="cellrowborder" valign="top" width="45.379999999999995%" headers="mcps1.1.5.1.4 "><p id="p16094864191739"><a name="p16094864191739"></a><a name="p16094864191739"></a>监控数据粒度。</p>
+    <td class="cellrowborder" valign="top" width="45.379999999999995%" headers="mcps1.2.5.1.4 "><p id="p16094864191739"><a name="p16094864191739"></a><a name="p16094864191739"></a>监控数据粒度。</p>
     <p id="p10636050191739"><a name="p10636050191739"></a><a name="p10636050191739"></a>取值范围：</p>
     <a name="ul28615592191739"></a><a name="ul28615592191739"></a><ul id="ul28615592191739"><li>"1"，原始数据</li><li>"300"，5分钟粒度</li><li>"1200"，20分钟粒度</li><li>"3600"，1小时粒度</li><li>"14400"，4小时粒度</li><li>"86400"，1天粒度</li></ul>
     </td>
     </tr>
-    <tr id="row36047354191739"><td class="cellrowborder" valign="top" width="19.84%" headers="mcps1.1.5.1.1 "><p id="p34154547191739"><a name="p34154547191739"></a><a name="p34154547191739"></a>filter</p>
+    <tr id="row36047354191739"><td class="cellrowborder" valign="top" width="19.84%" headers="mcps1.2.5.1.1 "><p id="p34154547191739"><a name="p34154547191739"></a><a name="p34154547191739"></a>filter</p>
     </td>
-    <td class="cellrowborder" valign="top" width="15.840000000000002%" headers="mcps1.1.5.1.2 "><p id="p15054921191739"><a name="p15054921191739"></a><a name="p15054921191739"></a>是</p>
+    <td class="cellrowborder" valign="top" width="15.840000000000002%" headers="mcps1.2.5.1.2 "><p id="p15054921191739"><a name="p15054921191739"></a><a name="p15054921191739"></a>是</p>
     </td>
-    <td class="cellrowborder" valign="top" width="18.94%" headers="mcps1.1.5.1.3 "><p id="p11489059191739"><a name="p11489059191739"></a><a name="p11489059191739"></a>字符串</p>
+    <td class="cellrowborder" valign="top" width="18.94%" headers="mcps1.2.5.1.3 "><p id="p11489059191739"><a name="p11489059191739"></a><a name="p11489059191739"></a>字符串</p>
     </td>
-    <td class="cellrowborder" valign="top" width="45.379999999999995%" headers="mcps1.1.5.1.4 "><p id="p58198569191739"><a name="p58198569191739"></a><a name="p58198569191739"></a>数据聚合方式。</p>
+    <td class="cellrowborder" valign="top" width="45.379999999999995%" headers="mcps1.2.5.1.4 "><p id="p58198569191739"><a name="p58198569191739"></a><a name="p58198569191739"></a>数据聚合方式。</p>
     <p id="p54025081191739"><a name="p54025081191739"></a><a name="p54025081191739"></a>支持的值为max, min, average, sum, variance。</p>
     <p id="p16463685191739"><a name="p16463685191739"></a><a name="p16463685191739"></a>filter参数的值不会影响原始数据（period为1）的查询结果。</p>
     </td>
@@ -171,80 +173,79 @@
     }
     ```
 
-    >![](public_sys-resources/icon-note.gif) **说明：**   
-    >错误码说明请参见[返回错误码说明](返回错误码说明.md)。  
 
+## 响应消息<a name="section25137312191739"></a>
 
-## 响应<a name="section25137312191739"></a>
+-   响应参数
 
--   要素说明
+    **表 3**  响应参数
 
     <a name="table39426324191739"></a>
-    <table><thead align="left"><tr id="row53703872191739"><th class="cellrowborder" valign="top" width="27.73207990599295%" id="mcps1.1.4.1.1"><p id="p55046364191739"><a name="p55046364191739"></a><a name="p55046364191739"></a>名称</p>
+    <table><thead align="left"><tr id="row53703872191739"><th class="cellrowborder" valign="top" width="27.73207990599295%" id="mcps1.2.4.1.1"><p id="p55046364191739"><a name="p55046364191739"></a><a name="p55046364191739"></a>名称</p>
     </th>
-    <th class="cellrowborder" valign="top" width="19.153936545240892%" id="mcps1.1.4.1.2"><p id="p46397032191739"><a name="p46397032191739"></a><a name="p46397032191739"></a>参数类型</p>
+    <th class="cellrowborder" valign="top" width="19.153936545240892%" id="mcps1.2.4.1.2"><p id="p46397032191739"><a name="p46397032191739"></a><a name="p46397032191739"></a>参数类型</p>
     </th>
-    <th class="cellrowborder" valign="top" width="53.113983548766164%" id="mcps1.1.4.1.3"><p id="p63273191739"><a name="p63273191739"></a><a name="p63273191739"></a>说明</p>
+    <th class="cellrowborder" valign="top" width="53.113983548766164%" id="mcps1.2.4.1.3"><p id="p63273191739"><a name="p63273191739"></a><a name="p63273191739"></a>说明</p>
     </th>
     </tr>
     </thead>
-    <tbody><tr id="row5125191191739"><td class="cellrowborder" valign="top" width="27.73207990599295%" headers="mcps1.1.4.1.1 "><p id="p12487337191739"><a name="p12487337191739"></a><a name="p12487337191739"></a>metrics</p>
+    <tbody><tr id="row5125191191739"><td class="cellrowborder" valign="top" width="27.73207990599295%" headers="mcps1.2.4.1.1 "><p id="p12487337191739"><a name="p12487337191739"></a><a name="p12487337191739"></a>metrics</p>
     </td>
-    <td class="cellrowborder" valign="top" width="19.153936545240892%" headers="mcps1.1.4.1.2 "><p id="p56609115191739"><a name="p56609115191739"></a><a name="p56609115191739"></a>JSON数组</p>
+    <td class="cellrowborder" valign="top" width="19.153936545240892%" headers="mcps1.2.4.1.2 "><p id="p56609115191739"><a name="p56609115191739"></a><a name="p56609115191739"></a>JSON数组</p>
     </td>
-    <td class="cellrowborder" valign="top" width="53.113983548766164%" headers="mcps1.1.4.1.3 "><p id="p21935611191739"><a name="p21935611191739"></a><a name="p21935611191739"></a>指标数据。</p>
-    </td>
-    </tr>
-    <tr id="row63202773191739"><td class="cellrowborder" valign="top" width="27.73207990599295%" headers="mcps1.1.4.1.1 "><p id="p19150970191739"><a name="p19150970191739"></a><a name="p19150970191739"></a>namespace</p>
-    </td>
-    <td class="cellrowborder" valign="top" width="19.153936545240892%" headers="mcps1.1.4.1.2 "><p id="p21725182191739"><a name="p21725182191739"></a><a name="p21725182191739"></a>字符串</p>
-    </td>
-    <td class="cellrowborder" valign="top" width="53.113983548766164%" headers="mcps1.1.4.1.3 "><p id="p14909357191739"><a name="p14909357191739"></a><a name="p14909357191739"></a>指标命名空间，格式为service.item；service和item必须是字符串，必须以字母开头，只能包含0-9/a-z/A-Z/_，总长度最短为3，最大为32。</p>
+    <td class="cellrowborder" valign="top" width="53.113983548766164%" headers="mcps1.2.4.1.3 "><p id="p21935611191739"><a name="p21935611191739"></a><a name="p21935611191739"></a>指标数据。</p>
     </td>
     </tr>
-    <tr id="row67075357191739"><td class="cellrowborder" valign="top" width="27.73207990599295%" headers="mcps1.1.4.1.1 "><p id="p64394799191739"><a name="p64394799191739"></a><a name="p64394799191739"></a>metric_name</p>
+    <tr id="row63202773191739"><td class="cellrowborder" valign="top" width="27.73207990599295%" headers="mcps1.2.4.1.1 "><p id="p19150970191739"><a name="p19150970191739"></a><a name="p19150970191739"></a>namespace</p>
     </td>
-    <td class="cellrowborder" valign="top" width="19.153936545240892%" headers="mcps1.1.4.1.2 "><p id="p43981882191739"><a name="p43981882191739"></a><a name="p43981882191739"></a>字符串</p>
+    <td class="cellrowborder" valign="top" width="19.153936545240892%" headers="mcps1.2.4.1.2 "><p id="p21725182191739"><a name="p21725182191739"></a><a name="p21725182191739"></a>字符串</p>
     </td>
-    <td class="cellrowborder" valign="top" width="53.113983548766164%" headers="mcps1.1.4.1.3 "><p id="p5762690191739"><a name="p5762690191739"></a><a name="p5762690191739"></a>指标名称，必须以字母开头，只能包含0-9/a-z/A-Z/_，长度最短为1，最大为64。</p>
+    <td class="cellrowborder" valign="top" width="53.113983548766164%" headers="mcps1.2.4.1.3 "><p id="p14909357191739"><a name="p14909357191739"></a><a name="p14909357191739"></a>指标命名空间，格式为service.item；service和item必须是字符串，必须以字母开头，只能包含0-9/a-z/A-Z/_，总长度最短为3，最大为32。</p>
     </td>
     </tr>
-    <tr id="row51864215191739"><td class="cellrowborder" valign="top" width="27.73207990599295%" headers="mcps1.1.4.1.1 "><p id="p40251921191739"><a name="p40251921191739"></a><a name="p40251921191739"></a>dimensions</p>
+    <tr id="row67075357191739"><td class="cellrowborder" valign="top" width="27.73207990599295%" headers="mcps1.2.4.1.1 "><p id="p64394799191739"><a name="p64394799191739"></a><a name="p64394799191739"></a>metric_name</p>
     </td>
-    <td class="cellrowborder" valign="top" width="19.153936545240892%" headers="mcps1.1.4.1.2 "><p id="p19479287191739"><a name="p19479287191739"></a><a name="p19479287191739"></a>JSON数组</p>
+    <td class="cellrowborder" valign="top" width="19.153936545240892%" headers="mcps1.2.4.1.2 "><p id="p43981882191739"><a name="p43981882191739"></a><a name="p43981882191739"></a>字符串</p>
     </td>
-    <td class="cellrowborder" valign="top" width="53.113983548766164%" headers="mcps1.1.4.1.3 "><p id="p34318386191739"><a name="p34318386191739"></a><a name="p34318386191739"></a>指标维度列表。</p>
+    <td class="cellrowborder" valign="top" width="53.113983548766164%" headers="mcps1.2.4.1.3 "><p id="p5762690191739"><a name="p5762690191739"></a><a name="p5762690191739"></a>指标名称，必须以字母开头，只能包含0-9/a-z/A-Z/_，长度最短为1，最大为64。</p>
+    </td>
+    </tr>
+    <tr id="row51864215191739"><td class="cellrowborder" valign="top" width="27.73207990599295%" headers="mcps1.2.4.1.1 "><p id="p40251921191739"><a name="p40251921191739"></a><a name="p40251921191739"></a>dimensions</p>
+    </td>
+    <td class="cellrowborder" valign="top" width="19.153936545240892%" headers="mcps1.2.4.1.2 "><p id="p19479287191739"><a name="p19479287191739"></a><a name="p19479287191739"></a>JSON数组</p>
+    </td>
+    <td class="cellrowborder" valign="top" width="53.113983548766164%" headers="mcps1.2.4.1.3 "><p id="p34318386191739"><a name="p34318386191739"></a><a name="p34318386191739"></a>指标维度列表。</p>
     <p id="p40430022191739"><a name="p40430022191739"></a><a name="p40430022191739"></a>单个维度为json对象，结构说明如下</p>
     <p id="p28325886191739"><a name="p28325886191739"></a><a name="p28325886191739"></a>dimension.name：必须以字母开头，只能包含0-9/a-z/A-Z/_/-，长度最短为1，最大为32。</p>
     <p id="p53606386191739"><a name="p53606386191739"></a><a name="p53606386191739"></a>dimension.value：必须以字母或数字开头，只能包含0-9/a-z/A-Z/_/-，长度最短为1，最大为256。</p>
     </td>
     </tr>
-    <tr id="row12695426191739"><td class="cellrowborder" valign="top" width="27.73207990599295%" headers="mcps1.1.4.1.1 "><p id="p21696615191739"><a name="p21696615191739"></a><a name="p21696615191739"></a>datapoints</p>
+    <tr id="row12695426191739"><td class="cellrowborder" valign="top" width="27.73207990599295%" headers="mcps1.2.4.1.1 "><p id="p21696615191739"><a name="p21696615191739"></a><a name="p21696615191739"></a>datapoints</p>
     </td>
-    <td class="cellrowborder" valign="top" width="19.153936545240892%" headers="mcps1.1.4.1.2 "><p id="p13595507191739"><a name="p13595507191739"></a><a name="p13595507191739"></a>JSON数组</p>
+    <td class="cellrowborder" valign="top" width="19.153936545240892%" headers="mcps1.2.4.1.2 "><p id="p13595507191739"><a name="p13595507191739"></a><a name="p13595507191739"></a>JSON数组</p>
     </td>
-    <td class="cellrowborder" valign="top" width="53.113983548766164%" headers="mcps1.1.4.1.3 "><p id="p27494249191739"><a name="p27494249191739"></a><a name="p27494249191739"></a>指标数据列表。由于查询数据时，云监控会根据所选择的聚合粒度向前取整from参数，所以datapoints中包含的数据点有可能会多于预期。</p>
-    </td>
-    </tr>
-    <tr id="row46121653191739"><td class="cellrowborder" valign="top" width="27.73207990599295%" headers="mcps1.1.4.1.1 "><p id="p44866403191739"><a name="p44866403191739"></a><a name="p44866403191739"></a>max/min/average/sum/variance</p>
-    </td>
-    <td class="cellrowborder" valign="top" width="19.153936545240892%" headers="mcps1.1.4.1.2 "><p id="p28996077191739"><a name="p28996077191739"></a><a name="p28996077191739"></a>数值</p>
-    </td>
-    <td class="cellrowborder" valign="top" width="53.113983548766164%" headers="mcps1.1.4.1.3 "><p id="p66980889191739"><a name="p66980889191739"></a><a name="p66980889191739"></a>指标值，该字段名称与请求参数中filter使用的查询值相同。</p>
+    <td class="cellrowborder" valign="top" width="53.113983548766164%" headers="mcps1.2.4.1.3 "><p id="p27494249191739"><a name="p27494249191739"></a><a name="p27494249191739"></a>指标数据列表。由于查询数据时，云监控会根据所选择的聚合粒度向前取整from参数，所以datapoints中包含的数据点有可能会多于预期。</p>
     </td>
     </tr>
-    <tr id="row65957089191739"><td class="cellrowborder" valign="top" width="27.73207990599295%" headers="mcps1.1.4.1.1 "><p id="p40923954191739"><a name="p40923954191739"></a><a name="p40923954191739"></a>timestamp</p>
+    <tr id="row46121653191739"><td class="cellrowborder" valign="top" width="27.73207990599295%" headers="mcps1.2.4.1.1 "><p id="p44866403191739"><a name="p44866403191739"></a><a name="p44866403191739"></a>max/min/average/sum/variance</p>
     </td>
-    <td class="cellrowborder" valign="top" width="19.153936545240892%" headers="mcps1.1.4.1.2 "><p id="p66608974191739"><a name="p66608974191739"></a><a name="p66608974191739"></a>时间戳</p>
+    <td class="cellrowborder" valign="top" width="19.153936545240892%" headers="mcps1.2.4.1.2 "><p id="p28996077191739"><a name="p28996077191739"></a><a name="p28996077191739"></a>数值</p>
     </td>
-    <td class="cellrowborder" valign="top" width="53.113983548766164%" headers="mcps1.1.4.1.3 "><p id="p26617833191739"><a name="p26617833191739"></a><a name="p26617833191739"></a>指标采集时间。</p>
+    <td class="cellrowborder" valign="top" width="53.113983548766164%" headers="mcps1.2.4.1.3 "><p id="p66980889191739"><a name="p66980889191739"></a><a name="p66980889191739"></a>指标值，该字段名称与请求参数中filter使用的查询值相同。</p>
     </td>
     </tr>
-    <tr id="row38233910191739"><td class="cellrowborder" valign="top" width="27.73207990599295%" headers="mcps1.1.4.1.1 "><p id="p9939029191739"><a name="p9939029191739"></a><a name="p9939029191739"></a>unit</p>
+    <tr id="row65957089191739"><td class="cellrowborder" valign="top" width="27.73207990599295%" headers="mcps1.2.4.1.1 "><p id="p40923954191739"><a name="p40923954191739"></a><a name="p40923954191739"></a>timestamp</p>
     </td>
-    <td class="cellrowborder" valign="top" width="19.153936545240892%" headers="mcps1.1.4.1.2 "><p id="p47265208191739"><a name="p47265208191739"></a><a name="p47265208191739"></a>字符串</p>
+    <td class="cellrowborder" valign="top" width="19.153936545240892%" headers="mcps1.2.4.1.2 "><p id="p66608974191739"><a name="p66608974191739"></a><a name="p66608974191739"></a>时间戳</p>
     </td>
-    <td class="cellrowborder" valign="top" width="53.113983548766164%" headers="mcps1.1.4.1.3 "><p id="p3276620191739"><a name="p3276620191739"></a><a name="p3276620191739"></a>指标单位。</p>
+    <td class="cellrowborder" valign="top" width="53.113983548766164%" headers="mcps1.2.4.1.3 "><p id="p26617833191739"><a name="p26617833191739"></a><a name="p26617833191739"></a>指标采集时间。</p>
+    </td>
+    </tr>
+    <tr id="row38233910191739"><td class="cellrowborder" valign="top" width="27.73207990599295%" headers="mcps1.2.4.1.1 "><p id="p9939029191739"><a name="p9939029191739"></a><a name="p9939029191739"></a>unit</p>
+    </td>
+    <td class="cellrowborder" valign="top" width="19.153936545240892%" headers="mcps1.2.4.1.2 "><p id="p47265208191739"><a name="p47265208191739"></a><a name="p47265208191739"></a>字符串</p>
+    </td>
+    <td class="cellrowborder" valign="top" width="53.113983548766164%" headers="mcps1.2.4.1.3 "><p id="p3276620191739"><a name="p3276620191739"></a><a name="p3276620191739"></a>指标单位。</p>
     </td>
     </tr>
     </tbody>
@@ -356,4 +357,8 @@
     </tbody>
     </table>
 
+
+## 错误码<a name="section142437169473"></a>
+
+请参考[返回错误码说明](返回错误码说明.md)。
 
